appId: com.layerzwallet.mobile
---
# Uses backdoor network switcher

- longPressOn:
    id: BackdoorNetworkSwitcher
- waitForAnimationToEnd
- tapOn:
    id: ${'backdoor-network-' + NETWORK}
- assertVisible:
    id: ${'selectedNetwork-' + NETWORK}
